Refactor human choice handling and enhance game feedback

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <button id="scissors">Scissors</button>
     </div>
     <div class="result-container">
-        
+        <p class="result"></p>
+        <p class="score"></p>
     </div>
 
 </div>
