--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <div class="game-container">
     <div class="button-container">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="rock"><img src="rock.png" alt="Rock"></button>
+        <button id="paper"><img src="paper.png" alt="Paper"></button>
+        <button id="scissors"><img src="scissors.png" alt="Scissors"></button>
     </div>
     <div class="result-container">
         <p class="result"></p>
