--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+    <h1>Rock - Paper - Scissors</h1>
+    <p class="rules">First to 5 wins!</p>
+    <p class="score-header"></p>
+</header>
+
 <div class="game-container">
     <div class="button-container">
         <button id="rock"><img src="rock.png" alt="Rock"></button>
@@ -15,7 +21,6 @@
     </div>
     <div class="result-container">
         <p class="result"></p>
-        <p class="score"></p>
     </div>
 
 </div>
