Add computer choice display and footer

--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
     <div class="result-container">
         <p class="result"></p>
     </div>
-
+    <div class="computer-choice-container">
+        <span>Computer chose:</span>
+        <img id="computer-choice-img" src="question-mark.svg" alt="Computer's choice" height="64" width="64" style="vertical-align:middle; display:inline-block; margin-left:8px;">
+    </div>
 </div>
     <script src="game.js"></script>
+    <footer class="rps-footer">
+      <span>&copy; 2025 </span>
+      <a href="https://github.com/Ha0177" target="_blank" class="github-link">
+        Ha0177
+        <img src="Octicons-mark-github.svg.png" alt="GitHub" class="github-icon" height="24" width="24" style="vertical-align:middle;">
+      </a>
+    </footer>
 </body>
 </html>
